# remarkabot

./: .gitignore  Dockerfile  LICENSE  README.md  chatgpt.py  config.py  db_setup.py  docker-compose.yml  gpt_model.py  handlers.py  main.py  phrases.py  pyproject.toml
