[tool.poetry]
name = "remarkabot"
version = "0.1.0"
description = ""
authors = ["Vanessa Rish <shelterly@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.1"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
